# Sims4_Mod_Manager

./: README.md  config.ini  get_mods_folder.py  pyproject.toml  settings.py  tempCodeRunnerFile.py  test_downloads_dir.py
sims4_mod_manager/: __main__.py  cli.py  config.py  setup.py  utils.py
sims4_mod_manager/mods/: manager.py  metadata.py
