[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
		\.git
		| \.venv
		| build
		| dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[project.scripts]
sims-mod-manager = "sims_mod_manager.__main__:main"
